[sc-9257] New action card in sistema
- New action-card component inn sistema
- Rename help-card into info-card
- Add documentation pages for both components

--- a/apps/dashboard/src/app/onboarding/aws-onboarding/step1-budget/step1-budget.component.html
+++ b/apps/dashboard/src/app/onboarding/aws-onboarding/step1-budget/step1-budget.component.html
@@ -5,9 +5,9 @@
   <h1>{{ 'onboarding.aws.title' | translate }}</h1>
   <div>
     <div class="title-s">{{ 'onboarding.aws.monthly-budget.question' | translate }}</div>
-    <nsi-help-card>
+    <nsi-info-card>
       {{ 'onboarding.aws.monthly-budget.help' | translate }}
-    </nsi-help-card>
+    </nsi-info-card>
   </div>
   <pa-input
     formControlName="budget"
