--- a/libs/sistema/theme/_pastanaga-component-overrides.scss
+++ b/libs/sistema/theme/_pastanaga-component-overrides.scss
@@ -11,6 +11,7 @@ overrides for
     …
  */
 @import 'tokens/buttons.tokens';
+@import 'tokens/card.tokens';
 @import 'tokens/chips.tokens';
 @import 'tokens/expander.tokens';
 @import 'tokens/menu.tokens';
