--- a/apps/dashboard/src/app/onboarding/aws-onboarding/step2/step2.component.html
+++ b/apps/dashboard/src/app/onboarding/aws-onboarding/step2/step2.component.html
@@ -5,9 +5,9 @@
   <h1>{{ 'onboarding.aws.get-started.title' | translate }}</h1>
   <div>
     <div [innerHTML]="'onboarding.aws.get-started.kb-required' | translate"></div>
-    <nsi-help-card>
+    <nsi-info-card>
       {{ 'onboarding.aws.get-started.kb-help' | translate }}
-    </nsi-help-card>
+    </nsi-info-card>
   </div>
 
   <div>
