--- a/libs/sistema/theme/tokens/_typography.tokens.scss
+++ b/libs/sistema/theme/tokens/_typography.tokens.scss
@@ -1,11 +1,23 @@
 @import './palette.tokens';
+@import './spacing.tokens';
 
 // =================================================
 // TYPOGRAPHY
 // =================================================
 // Family
-$font-family-sans-serif: Inter, Futura, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
-  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+$font-family-sans-serif:
+  Inter,
+  Futura,
+  -apple-system,
+  BlinkMacSystemFont,
+  'Segoe UI',
+  Roboto,
+  'Helvetica Neue',
+  Arial,
+  sans-serif,
+  'Apple Color Emoji',
+  'Segoe UI Emoji',
+  'Segoe UI Symbol';
 $font-family-monospace: 'Source Code Pro', SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
   monospace;
 $font-family-body: $font-family-sans-serif;
@@ -16,6 +28,7 @@ $font-weight-regular: 400;
 $font-weight-semi-bold: 600;
 $font-weight-bold: 700;
 
+$font-weight-overline: $font-weight-semi-bold;
 $font-weight-body-xs: $font-weight-regular;
 $font-weight-body-s: $font-weight-regular;
 $font-weight-body-m: $font-weight-regular;
@@ -49,7 +62,7 @@ $font-size: (
   @return map-get($font-size, $t-shirt-size);
 }
 
-$font-size-overline: font-size(xxs);
+$font-size-overline: rhythm(1);
 $font-size-body-xs: font-size(xxs);
 $font-size-body-s: font-size(xs);
 $font-size-title-xxs: font-size(xs);
