[sc-9290] Fix getting started flow
- Remove deprecated method `getProcessingStatus` from `db`
- Use kb `processingStatus` method instead in getting started component

--- a/apps/dashboard/src/app/onboarding/getting-started/upload-list/upload-list.component.html
+++ b/apps/dashboard/src/app/onboarding/getting-started/upload-list/upload-list.component.html
@@ -32,13 +32,18 @@
 
                 @if (!item.processing) {
                   <span class="body-s">
-                    {{ 'getting-started.processing.status.queued' | translate }}
+                    {{
+                      (item.rank !== undefined
+                        ? 'getting-started.processing.status.queued-with-rank'
+                        : 'getting-started.processing.status.queued'
+                      ) | translate: { rank: item.rank }
+                    }}
                   </span>
                 } @else {
                   <span class="body-s">
                     {{
                       'getting-started.processing.status.estimated-time'
-                        | translate: { estimation: item.estimation || 1 }
+                        | translate: { estimation: formatETA.transform(item.estimation || 1) }
                     }}
                   </span>
                 }
