--- a/libs/search-widget/src/components/answer/Chat.scss
+++ b/libs/search-widget/src/components/answer/Chat.scss
@@ -35,7 +35,7 @@
     --padding-side-input-container: var(--chat-padding);
 
     &.fullscreen {
-      --height-container: calc(100vh - var(--main-padding-top));
+      --height-container: 100%;
       --max-width-container: calc(100vw - var(--main-padding-side) * 2);
       --padding-top-input-container: 0;
       --padding-bottom-input-container: 0;
