--- a/apps/sistema-demo/src/app/sistema-pages/sistema-cards/sistema-info-card.component.html
+++ b/apps/sistema-demo/src/app/sistema-pages/sistema-cards/sistema-info-card.component.html
@@ -1,11 +1,53 @@
 <pa-demo-page>
   <pa-demo-title>Info card</pa-demo-title>
-  <pa-demo-description>Info card is a wrapper component styling its content as an info box.</pa-demo-description>
+  <pa-demo-description>
+    <p>Info card is a wrapper component styling its content as an info box.</p>
+    <p>
+      There are three info box types for different use cases: the default one, one for highlighting the content and one
+      to display error or warning.
+    </p>
+  </pa-demo-description>
   <pa-demo-examples>
     <nsi-info-card>
-      Here is some information you need to know, giving you more context about something else in the screen.
+      Here is a default
+      <code>info-card</code>
+      , giving you more context about something else in the screen, discretely highlighted mostly by the box.
+    </nsi-info-card>
+    <br />
+    <nsi-info-card type="highlight">
+      Here is some highlighted information using
+      <code>highlight</code>
+      type, giving you more context about something else in the screen, highlighted by the box and the colors.
+    </nsi-info-card>
+    <br />
+    <nsi-info-card type="warning">
+      Here is some
+      <code>warning</code>
+      which is important to read, highlighted with destructive color and the box.
     </nsi-info-card>
   </pa-demo-examples>
+
+  <pa-demo-usage>
+    <h3>Inputs</h3>
+    <dl>
+      <dt>type</dt>
+      <dd>
+        Info card type:
+        <code>default</code>
+        |
+        <code>highlight</code>
+        |
+        <code>warning</code>
+        .
+        <small>
+          (
+          <code>default</code>
+          by default)
+        </small>
+      </dd>
+    </dl>
+  </pa-demo-usage>
+
   <pa-demo-code>
     <pre><code>{{code}}</code></pre>
   </pa-demo-code>
