--- a/libs/common/src/lib/upload/upload-data/upload-data.component.html
+++ b/libs/common/src/lib/upload/upload-data/upload-data.component.html
@@ -26,8 +26,8 @@
         (click)="selectUpload('qna')"></stf-upload-option>
     </div>
 
-    <div class="desktop-option">
-      @if (isSyncEnabled | async) {
+    @if (isSyncEnabled | async) {
+      <div class="sync-option">
         @if (!hasSyncServer) {
           <p class="body-m description">
             {{ 'stash.upload.sync.setup' | translate }}
@@ -49,23 +49,7 @@
           type="sources"
           [disabled]="!hasSyncServer || (isServerDown | async) === true"
           (selectConnector)="onSelectConnector($event)"></nsy-connectors>
-      } @else {
-        <p class="body-m description">
-          <span class="title-xs">Nuclia Desktop.</span>
-          {{ 'stash.upload.desktop.description' | translate }}
-        </p>
-        <pa-button
-          class="desktop-button"
-          (click)="openDesktop()">
-          <img
-            src="assets/logos/nuclia-desktop-white.svg"
-            alt="Nuclia Desktop" />
-        </pa-button>
-
-        <div class="sources-container">
-          <stf-desktop-sources showDetails></stf-desktop-sources>
-        </div>
-      }
-    </div>
+      </div>
+    }
   </div>
 </div>
