--- a/libs/sistema/src/lib/cards/info-card/info-card.component.scss
+++ b/libs/sistema/src/lib/cards/info-card/info-card.component.scss
@@ -9,7 +9,8 @@
   border: 1px solid var(--info-card-border-color);
   border-radius: rhythm(1);
   color: var(--info-card-color);
-  display: block;
+  display: flex;
+  gap: rhythm(1);
   padding: rhythm(1.5) rhythm(2);
 
   &.warning {
@@ -21,5 +22,9 @@
     --info-card-background: #{$color-tertiary-lightest};
     --info-card-border-color: #{$color-tertiary-lighter};
     --info-card-color: #{$color-tertiary-strong};
+  }
+
+  .body-m {
+    padding: rhythm(0.25) 0;
   }
 }
