--- a/libs/sistema/theme/tokens/_toggle.tokens.scss
+++ b/libs/sistema/theme/tokens/_toggle.tokens.scss
@@ -1,5 +1,7 @@
 @import './palette.tokens';
+@import '../../../pastanaga-angular/projects/pastanaga-angular/src/styles/theme/spacing.tokens';
 
+// Checkboxes and radio
 $color-background-toggle-selected: $color-dark-stronger;
 $color-background-toggle-selected-hover: $color-neutral-regular;
 $color-background-toggle-disabled: $color-neutral-light;
@@ -9,3 +11,11 @@ $color-border-toggle-unselected: $color-dark-stronger;
 $color-border-toggle-unselected-disabled: $color-neutral-light;
 
 $color-check-toggle-disabled: $color-neutral-lighter; //IMPORTANT: it must be an hsl color
+
+// Toggles
+$height-toggle: rhythm(2);
+$width-toggle: rhythm(4);
+$margin-toggle-container: rhythm(0.5) 0;
+$margin-top-toggle-with-help-label: 0;
+
+$color-background-toggle-slider-selected: #0cad55;
