--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-training/training-history/training-history.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-training/training-history/training-history.component.html
@@ -1,8 +1,7 @@
 <div class="training-history page-spacing">
   <nsi-back-button
     class="select-kb-back"
-    link=".."
-    text="sidenav.trainings">
+    link="..">
     {{ 'sidenav.trainings' | translate }}
   </nsi-back-button>
   <h1>{{ 'training.history' | translate }}</h1>
