--- a/libs/sistema/theme/tokens/_spacing.tokens.scss
+++ b/libs/sistema/theme/tokens/_spacing.tokens.scss
@@ -48,4 +48,4 @@ $rhythm: (
 $height-viewport-medium-max: 799px;
 $height-viewport-medium-min: 800px;
 
-$border-radius-default: 0;
+$border-radius-default: 4px;
