--- a/apps/sistema-demo/src/app/sistema-pages/sistema-label/sistema-label.component.html
+++ b/apps/sistema-demo/src/app/sistema-pages/sistema-label/sistema-label.component.html
@@ -3,48 +3,43 @@
   <pa-demo-description>
     <p>
       Nuclia's label are done using
-      <a routerLink="/chip">Pastanaga's selectionable chip</a>
+      <a routerLink="/chip">Pastanaga's closeable chip</a>
       component.
     </p>
-    <p>We provide them in four colors: blue, black, yellow and green.</p>
+    <p>
+      We provide them in different colors defined in
+      <code>LABEL_COLORS</code>
+      constant.
+    </p>
   </pa-demo-description>
   <pa-demo-examples>
-    <pa-chip-selectionable
-      textColor="#1D00C2FF"
-      borderColor="#1D00C2FF"
-      backgroundColor="#C7BDFFFF"
-      [selected]="selection === 1"
-      (select)="onSelect(1)">
-      Blue label
-    </pa-chip-selectionable>
-    <pa-chip-selectionable
-      [selected]="selection === 2"
-      (select)="onSelect(2)">
-      Black label
-    </pa-chip-selectionable>
-    <pa-chip-selectionable
-      textColor="#C7A900FF"
-      borderColor="#C7A900FF"
-      backgroundColor="#FFF8D1FF"
-      [selected]="selection === 3"
-      (select)="onSelect(3)">
-      Yellow label
-    </pa-chip-selectionable>
-    <pa-chip-selectionable
-      textColor="#0CAD55"
-      borderColor="#0CAD55"
-      backgroundColor="#DAF3E6"
-      [selected]="selection === 4"
-      (select)="onSelect(4)">
-      Green label
-    </pa-chip-selectionable>
-
-    <ol style="margin: 32px 16px; padding: 0">
-      <li>Click on a label to select it.</li>
-      <li>Change the selection by clicking on another label.</li>
-      <li>Unselect them all by clicking on the current selection.</li>
-    </ol>
+    <div style="display: flex; gap: 12px; flex-wrap: wrap">
+      @for (color of colors; track color) {
+        <nsi-label [color]="color.mainColor">Color {{ $index }}</nsi-label>
+      }
+    </div>
   </pa-demo-examples>
+
+  <pa-demo-usage>
+    <h3>Inputs</h3>
+    <dl>
+      <dt>color</dt>
+      <dd>
+        Hexadecimal color coming from
+        <code>LABEL_COLORS</code>
+        constant.
+        <small>(Optional: we use the first color of the const by default)</small>
+      </dd>
+      <dt>disabled</dt>
+      <dd>Disable the chip so the close button doesn't work anymore.</dd>
+    </dl>
+
+    <h3>Outputs</h3>
+    <dl>
+      <dt>removeLabel</dt>
+      <dd>Event triggered when clicking on the label’s close button.</dd>
+    </dl>
+  </pa-demo-usage>
 
   <pa-demo-code>
     <pre><code>{{code}}</code></pre>
