--- a/libs/sync/src/lib/upload/sync.component.html
+++ b/libs/sync/src/lib/upload/sync.component.html
@@ -6,6 +6,11 @@
     {{ (currentSync | async)?.title }}
   </h2>
   <div class="actions">
+    <pa-toggle
+      [value]="enabled | async"
+      (click)="toggle()">
+      {{ 'upload.active' | translate }}
+    </pa-toggle>
     <pa-button
       (click)="delete()"
       icon="trash"
