--- a/libs/sync/src/lib/upload/tabs/activity.component.html
+++ b/libs/sync/src/lib/upload/tabs/activity.component.html
@@ -1,17 +1,19 @@
-<p>{{ 'upload.activity.help' | translate }}</p>
-@if ((canSelectFiles | async) && (noFolderSelected | async)) {
-  <div class="warning-container">
-    <pa-icon name="warning"></pa-icon>
-    <div class="title-xxs">
-      {{ 'upload.activity.no-folders' | translate }}
+@if ((disabled | async) === false) {
+  <p>{{ 'upload.activity.help' | translate }}</p>
+  @if ((canSelectFiles | async) && (noFolderSelected | async)) {
+    <div class="warning-container">
+      <pa-icon name="warning"></pa-icon>
+      <div class="title-xxs">
+        {{ 'upload.activity.no-folders' | translate }}
+      </div>
     </div>
-  </div>
+  }
+  <pa-button
+    (click)="triggerSync()"
+    [disabled]="syncing || ((canSelectFiles | async) && (noFolderSelected | async))">
+    {{ 'upload.activity.sync-now' | translate }}
+  </pa-button>
 }
-<pa-button
-  (click)="triggerSync()"
-  [disabled]="syncing || ((canSelectFiles | async) && (noFolderSelected | async))">
-  {{ 'upload.activity.sync-now' | translate }}
-</pa-button>
 <pa-table columns="48px 200px auto">
   <pa-table-header>
     <pa-table-cell header></pa-table-cell>
